tests/integration/snapshots/integration__parse_failure__unexpected_letter_in_number.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
1a
stdout ---

stderr ---
error: unexpected character `a`. expected start of a json value
 --> stdin:1:2
  |
1 | 1a
  |  ^
